<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>laser_rahcm_teleop</name>
  <version>0.0.0</version>
  <description>Teleoperation package for Chico Mendes with aquatic and ground modes</description>
  <maintainer email="emmanuel.cavalcanti2003@gmail.com">aprigio</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>

  <depend>joy</depend>               
  <depend>teleop_twist_joy</depend>  
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>xacro</exec_depend>

<export>
    <build_type>ament_cmake</build_type>
    <!-- Exportando o plugin do Gazebo -->
    <gazebo_ros plugin="${prefix}/lib/libusv_gazebo_wheel_plugin.so"/>
  </export>
</package>